Critical bug fix: missing a </div> tag

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -189,6 +189,7 @@
         </div>
       </div>
     </div>
+  </div>
       
     <!--Modal for Posting-->
     <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -216,7 +217,7 @@
                   </div>
                   <div class="form-group">
                     <label for="rateLocation">How would you rate your stay? </label>
-                    <input name="rateLocation" id="rating" value="10">
+                    <input name="rateLocation" id="ratingPost" value="10">
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
